Jobs filtering (#7657)
